crates/test-files/fixtures/compile_errors/duplicate_var_in_child_scope.fe
contract Foo {
    pub fn bar() {
        let my_array: Array<u64, 3> = [u64(0); 3]
        let sum: u256 = 0
        for i in my_array {
            let sum: u64 = 0
            sum += i
        }
    }
}
